--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <HTML>
 
 <HEAD>
@@ -16,29 +14,22 @@
 
 <a href="http://www.schoeppach.com">www.schoeppach.com</a>
 
-is a link to another nifty site
+is a link to my site
 
 <H1>Hallo Zukunfts Ich</H1>
 
 <H2>dies ist eine Nachricht aus der Vergangenheit</H2>
 
-Send me mail at <a href="">
+thanx to <a href="https://the-morpheus.de/">the-morpheus</a>
 
-spoon@mail.de</a>.
+<P> die Weisheit des Tages lautet
 
-<P> neuer Absatz!
+<P> <B>Wer mit einem Finger auf andere zeigt,</B>
 
-<P> <B>Fett</B>
-
-<BR> <B><I>Fett und Schraeg</I></B>
+<BR> <B><I>zeigt mit 3 Fingern auf sich selbst?!</I></B>
 
 <HR>
 
 </BODY>
 
 </HTML> 
-
-
-
-
-
