--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <HR>
 
-<a href="http://www.schoeppach.com">www.schoeppach.com</a>
+<a href="http://www.schoeppach.com"target="_blank">www.schoeppach.com</a>
+
+
 
 is a link to my site
 
@@ -20,7 +22,7 @@ is a link to my site
 
 <H2>dies ist eine Nachricht aus der Vergangenheit</H2>
 
-thanx to <a href="https://the-morpheus.de/">the-morpheus</a>
+thanx to <a href="https://the-morpheus.de/"target="_blank">the-morpheus</a>
 
 <P> die Weisheit des Tages lautet
 
