--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
 <HTML>
 
-<HEAD>
+<BODY BGCOLOR="57595D">
 
-<TITLE>NGNIX</TITLE>
+<font color=white>
+
+<br/>
+
+<p align="center"><B>NGNIX</B></p>
+
+<p align="center"><B>Webserver</B></p>
 
 </HEAD>
 
-<BODY BGCOLOR="FFFFFF">
+</HEAD>
 
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+<br/>
 
 <HR>
 
-<a href="http://www.schoeppach.com"target="_blank">www.schoeppach.com</a>
+<p align="center"><a href= color:blue "http://www.schoeppach.com"target="_blank">www.schoeppach.com</a></p>
 
+<p align="center">is a link to my site</p>
 
+<br/>
 
-is a link to my site
+<p align="center"><B>Hallo Zukunfts Ich</B></p>
 
-<H1>Hallo Zukunfts Ich</H1>
+<p align="center"><B>dies ist eine Nachricht aus der Vergangenheit</B> </p>
 
-<H2>dies ist eine Nachricht aus der Vergangenheit</H2>
+<br/>
 
-thanx to <a href="https://the-morpheus.de/"target="_blank">the-morpheus</a>
+<p align="center">thanx to <a href= color:blue "https://the-morpheus.de/"target="_blank">the-morpheus</a>
 
-<P> die Weisheit des Tages lautet
+<br/>
 
-<P> <B>Wer mit einem Finger auf andere zeigt,</B>
+<p align="center">die Weisheit des Tages lautet</p>
 
-<BR> <B><I>zeigt mit 3 Fingern auf sich selbst?!</I></B>
+<br/>
 
+<p align="center"><B>Wer mit einem Finger auf andere zeigt,</B></p>
+
+<p align="center"><B><I>zeigt mit 3 Fingern auf sich selbst?!</I></p>
 <HR>
 
 </BODY>
