--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <HR>
 
-<p align="center"><a href= color:blue "http://www.schoeppach.com"target="_blank">www.schoeppach.com</a></p>
+<p align="center"><a href= "http://www.schoeppach.com"target="_blank">www.schoeppach.com</a></p>
 
 <p align="center">is a link to my site</p>
 
@@ -30,7 +30,7 @@
 
 <br/>
 
-<p align="center">thanx to <a href= color:blue "https://the-morpheus.de/"target="_blank">the-morpheus</a>
+<p align="center">thanx to <a href= "https://the-morpheus.de/"target="_blank">the-morpheus</a>
 
 <br/>
 
