--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <HTML>
 
-<BODY BGCOLOR="57595D">
+<BODY BGCOLOR="#2B3856">
 
-<font color=white>
+<font color=#FBB117>
 
 <br/>
 
@@ -18,11 +18,16 @@
 
 <HR>
 
-<p align="center"><a href= "http://www.schoeppach.com"target="_blank">www.schoeppach.com</a></p>
+<p align="center"><a href= "http://www.schoeppach.com"target="_blank"><font color=#43C6DB>
+ www.schoeppach.com</a></p>
 
-<p align="center">is a link to my site</p>
+<font color=#EB5406>
+
+<p align="center">my website</p>
 
 <br/>
+
+<font color=#CD7F32>
 
 <p align="center"><B>Hallo Zukunfts Ich</B></p>
 
@@ -30,17 +35,21 @@
 
 <br/>
 
-<p align="center">thanx to <a href= "https://the-morpheus.de/"target="_blank">the-morpheus</a>
+<font color=#FBB117>
+
+<p align="center"><B><I>Wer mit einem Finger auf andere zeigt,</I></B></p>
+
+<p align="center"><B><I>zeigt mit 3 Fingern auf sich selbst?!</I></B></p>
 
 <br/>
 
-<p align="center">die Weisheit des Tages lautet</p>
+<font color=#EB5406>
 
-<br/>
+<p align="center">thanx to</p>
 
-<p align="center"><B>Wer mit einem Finger auf andere zeigt,</B></p>
+<p align="center"><a href= "https://the-morpheus.de/"target="_blank"><font color=#43C6DB>
+the-morpheus</a>
 
-<p align="center"><B><I>zeigt mit 3 Fingern auf sich selbst?!</I></p>
 <HR>
 
 </BODY>
