--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
 
 <HR>
 
-<p align="center"><a href= "http://www.schoeppach.com"target="_blank"><font color=#43C6DB>
- www.schoeppach.com</a></p>
-
-<font color=#EB5406>
-
-<p align="center">my website</p>
-
 <br/>
 
 <font color=#CD7F32>
@@ -35,20 +28,29 @@
 
 <br/>
 
-<font color=#FBB117>
+<font color=#EB5406>
 
-<p align="center"><B><I>Wer mit einem Finger auf andere zeigt,</I></B></p>
+<p align="center"><B><I>"Wer mit einem Finger auf andere zeigt,</I></B></p>
 
-<p align="center"><B><I>zeigt mit 3 Fingern auf sich selbst?!</I></B></p>
+<p align="center"><B><I>zeigt mit 3 Fingern auf sich selbst?!"</I></B></p>
 
 <br/>
 
-<font color=#EB5406>
+<font color=#E42217>
 
 <p align="center">thanx to</p>
 
 <p align="center"><a href= "https://the-morpheus.de/"target="_blank"><font color=#43C6DB>
 the-morpheus</a>
+
+<font color=#E42217>
+
+<p align="center">and</p>
+
+<p align="center"><a href= "https://www.youtube.com/c/SebastianPhilippiTV"target="_blank"><font color=#43C6DB>
+sephi-42</a>
+
+<br/>
 
 <HR>
 
