--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@ the-morpheus</a>
 sephi-42</a>
 
 <br/>
-  
+
 <br/>
 
 <HR>
+
+<font color=#00000>
+
+<br/>
+
+<p align="center"><B>created by schoeppach</B></p>
 
 </BODY>
 
